claudecode-opus/force-app/main/default/objects/Case/fields/External_Ticket_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Ticket_ID__c</fullName>
    <externalId>true</externalId>
    <label>External Ticket ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>