claudecode-opus/force-app/main/default/objects/Case/fields/Sync_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Sync_Error_Message__c</fullName>
    <label>Sync Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>